welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:7: error: value or is not a member of Boolean
while (2*a<b or b<2*a)
             ^