welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
}
var a:Int=0
var b:Int=1

while (2*a<b or b<2*a)
{
	if (estSurBiscuit()) {
		a=a+1
	}
	if (estBrosseBaissee()) {
		b=b+1
	}
	avance()
}
